FLY wire David/force-app/main/default/objects/Product2/fields/Exception_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Exception_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for BOPI-323</description>
    <inlineHelpText>Field to let pricing team know when a product has exception pricing and needs to be manually approved</inlineHelpText>
    <label>Exception Pricing</label>
    <type>Checkbox</type>
</CustomField>