FLY wire David/force-app/main/default/objects/Product2/fields/No_PC_Required__c.field-meta.xml
<CustomField>
    <fullName>No_PC_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not create a prod config record for this product, it is not an implemented product. This value is referenced on the Opp Product by Auto Create Prod Config Flow for HC.</description>
    <inlineHelpText>Do not create a prod config record for this product, it is not an implemented product. This value is referenced on the Opp Product by Auto Create Prod Config Flow for HC.</inlineHelpText>
    <label>No PC Required</label>
    <type>Checkbox</type>
</CustomField>