FLY wire David/force-app/main/default/objects/Product2/fields/NS_Next_Bill_Type__c.field-meta.xml
<CustomField>
    <fullName>NS_Next_Bill_Type__c</fullName>
    <description>Created for BOPI-337. Sent to NS via integration for billing information. Calculates NS Next Bill Date on Order Product</description>
    <inlineHelpText>Select when this product should be invoiced by NetSuite</inlineHelpText>
    <label>NS Next Bill Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NS_Next_Bill_Type</valueSetName>
    </valueSet>
</CustomField>