FLY wire David/force-app/main/default/objects/Product2/fields/Output_Description__c.field-meta.xml
<CustomField>
    <fullName>Output_Description__c</fullName>
    <description>Product Description used on quote and contract to be visible to the Client and refer to the type of charge or product. BOPI-524 Provided by D. Goodchild and P. Glaser</description>
    <inlineHelpText>Product Description used on quote and contract to be visible to the Client and refer to the type of charge or product.</inlineHelpText>
    <label>Output Description</label>
    <length>350</length>
    <type>LongTextArea</type>
</CustomField>