FLY wire David/force-app/main/default/objects/Product2/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <description>BOPI-337 Who typically pays for the product/service. Set by default on product, may be visible during quoting so that users can change this value and send to NS for correct billing.</description>
    <inlineHelpText>Who is the default payer for this product/service</inlineHelpText>
    <label>Payer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payer</valueSetName>
    </valueSet>
</CustomField>