FLY wire David/force-app/main/default/objects/Product2/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PayX</fullName>
            </value>
            <value>
                <fullName>CRS</fullName>
            </value>
            <value>
                <fullName>WeBills</fullName>
            </value>
            <value>
                <fullName>Simplee</fullName>
            </value>
            <value>
                <fullName>CohortGo</fullName>
            </value>
            <value>
                <fullName>WPM</fullName>
            </value>
            <value>
                <fullName>Budapest</fullName>
            </value>
            <value>
                <fullName>Studylink</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>SFS</fullName>
            </value>
            <value>
                <fullName>Agents</fullName>
                <isActive>false</isActive>
                <label>Agents</label>
            </value>
            <value>
                <fullName>Payex</fullName>
                <isActive>false</isActive>
                <label>Payex</label>
            </value>
            <value>
                <fullName>eStore</fullName>
                <isActive>false</isActive>
                <label>eStore</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>