FLY wire David/force-app/main/default/objects/Product2/fields/Product_PO1__c.field-meta.xml
<CustomField>
    <fullName>Product_PO1__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product PO1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>