FLY wire David/force-app/main/default/objects/Product2/fields/ProductLongID__c.field-meta.xml
<CustomField>
    <fullName>ProductLongID__c</fullName>
    <description>Record ID for the Product, used for Admin purposes.</description>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Record ID for the Product, used for Admin purposes.</inlineHelpText>
    <label>ProductLongID</label>
    <type>Text</type>
</CustomField>