FLY wire David/force-app/main/default/objects/Product2/fields/ReadyToDeploy__c.field-meta.xml
<CustomField>
    <fullName>ReadyToDeploy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a deployment only field for the deployment of records</description>
    <label>ReadyToDeploy</label>
    <type>Checkbox</type>
</CustomField>