FLY wire David/force-app/main/default/objects/Product2/fields/Refer_Resell_Partner__c.field-meta.xml
<CustomField>
    <fullName>Refer_Resell_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SALDEV-754 Twins to Quote Line, to display in QLE drawer</description>
    <inlineHelpText>Select the strategic partner account to be set by default when quoting this product</inlineHelpText>
    <label>Refer/Resell Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>