FLY wire David/force-app/main/default/objects/Product2/fields/Rev_Share__c.field-meta.xml
<CustomField>
    <fullName>Rev_Share__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for BOPI-340</description>
    <inlineHelpText>Used in a validation rule and approval rule for Revenue team.</inlineHelpText>
    <label>Rev Share</label>
    <type>Checkbox</type>
</CustomField>