FLY wire David/force-app/main/default/objects/Product2/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Created from JIRA ticket: BOPI-2. Added &quot;Beta&quot; value from JIRA ticket: BOPI-8</description>
    <inlineHelpText>Field will be used in a Search Filter to prevent Existing Customers Only products from being selectable on net new quotes</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Existing Customers Only</fullName>
            </value>
            <value>
                <fullName>Beta</fullName>
            </value>
            <value>
                <fullName>(None)</fullName>
                <isActive>false</isActive>
                <label>(None)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>