FLY wire David/force-app/main/default/objects/Product2/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <description>JIRA ticket: BOPI-2</description>
    <inlineHelpText>Field will be used in a Search filter to limit product selection to only those within the Vertical(s) selected</inlineHelpText>
    <label>Vertical</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vertical</valueSetName>
    </valueSet>
</CustomField>