FLY wire David/force-app/main/default/objects/Product2/validationRules/Beta_Product_HasExceptionPricing.validationRule-meta.xml
<ValidationRule>
    <fullName>Beta_Product_HasExceptionPricing</fullName>
    <active>true</active>
    <description>Used to ensure  If the Product Type = Beta that Exception Pricing is checked.</description>
    <errorConditionFormula>AND (
ISPICKVAL(Status__c, &apos;Beta&apos;),
Exception_Pricing__c  = False
)</errorConditionFormula>
    <errorDisplayField>Exception_Pricing__c</errorDisplayField>
    <errorMessage>Beta products should always have Exception Pricing.</errorMessage>
</ValidationRule>