FLY wire David/force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Platform__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>