FLY wire David/force-app/main/default/objects/Product2/listViews/CPQ_Active_Products.listView-meta.xml
<ListView>
    <fullName>CPQ_Active_Products</fullName>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>SBQQ__BillingFrequency__c</columns>
    <columns>Usage_Type__c</columns>
    <columns>Vertical__c</columns>
    <columns>Regional_Availability__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
        <operation>startsWith</operation>
        <value>FW</value>
    </filters>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>CPQ Active Products</label>
</ListView>